# smooth_q_to_pep

./: .gitignore  IsotonicPEP.ipynb  IsotonicPEP.py  IsplinePEP.ipynb  PercolatorPEP.ipynb  README.md  obs2pep.ipynb  pyIsoPEP.ipynb  pyproject.toml  q2pep.ipynb
.github/workflows/: PyPIpublish.yml  pyisopep.yaml
data/: target.fasta
datasets/PXD003868/: run_crux.sh
datasets/PXD004325/: run_crux.sh
datasets/PXD004424/: run_crux.sh
datasets/PXD004467/: run_crux.sh
datasets/PXD004536/: run_crux.sh
datasets/PXD004565/: run_crux.sh
datasets/PXD004947/: run_crux.sh
datasets/PXD004948/: run_crux.sh
datasets/PXD005025/: run_crux.sh
datasets/PXD013274/: run_crux.sh
example/: peptide.cat.txt  peptide.decoy.txt
figs/ispline/: max_diff.scipy.txt
pyIsoPEP/: Dockerfile  IsotonicPEP.py  __init__.py  main.py  requirements.txt
pyiso_scripts/: insert_default_direction.py  main.sh  repeat_main.sh  revise_files.py  run_all.sh  slurm_run.sh  test_design.md
scripts/: IsotonicPEP.py  README.md  main.py  main.sh  main_perc.sh  plt_figs.py  preparation.sh  repeat_main.sh  revise_labels.py  run_crux.sh  run_normal_isoperc.sh  slurm_run_perc.sh  slurm_run_preparation.sh
